--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
         </div>
     </section>
 
+    <!-- Ensure the script is loaded at the end -->
     <script src="script.js"></script>
 </body>
 </html>
