--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Plant Detector</h1>
+        <h1>Plant Detective</h1>
         <p>Upload an image of a plant to learn more about it.</p>
     </header>
 
@@ -43,6 +43,12 @@
                 <!-- Plant details will go here -->
             </tbody>
         </table>
+
+        <p/>
+            <div id="health-assessment-section" class="hidden">
+    <h3>Health Assessment Results:</h3>
+    <ul></ul>
+</div>
 
         <p/>
         <h2>Similar Plants</h2>
